Risoluzione mancanza di collegamenti

--- a/Pagine/ChiSono.html
+++ b/Pagine/ChiSono.html
@@ -32,12 +32,20 @@
         <p>Nato: 07:30/8/8/2005 </p>
         <p>Residenza: Italia </p>
         </div>
+
+        <a href="https://github.com/Ricaldone-Gabriel">
         <div class="casellaInfo">
             <h1>GitHub</h1>
+            <img src="../Immagini/github.png" id="immagineInfo">
         </div>
-        <div class="casellaInfo">
-            <p>In futuro...</p>
-        </div>
+        </a>
+
+        <a href="">
+            <div class="casellaInfo">
+                <h1>In arrivo</h1>
+                <img src="../Immagini/loading.gif" id="immagineInfo">
+            </div>
+        </a>
         <!--Barra sotto-->
         <div id="barraSotto">
         </div>
