Inserimento pagina JS

--- a/index.html
+++ b/index.html
@@ -30,20 +30,21 @@
         <div class="casellaTesto">
             <h1 style="text-align:center;"> <b>I MIEI 5 ARTICOLI PIU' IMPORTANTI</b></h1>
         </div>
+
+        <a href="Pagine/ArticoliScuola/Javascript.html">
+            <div class="boxArticoli" style="margin-top: 30px;">
+                <h1>JavaScript</h1>
+                <p>In questo articolo parleremo di JavaScript!</p>   
+            <img src="Immagini/Javascript.png" height=250px>
+        </div>
+        </a>
+
         <a href="Pagine/ArticoliScuola/SistemiOperativi.html">
             <div class="boxArticoli" style="margin-top: 30px;">
                 <h1>Linux</h1>
                 <p>In questo articolo parleremo del sistema operativo Linux e delle sue varianti</p>
                 
             <img src="Immagini/linux.jpg" height=250px>
-            </div>
-        </a>
-        <a href="">
-            <div class="boxArticoli" style="margin-top: 30px;">
-                <h1>In arrivo...</h1>
-                <p>Aspetta solo un pò!</p>
-                    
-            <img src="Immagini/loading.gif" height=250px>
             </div>
         </a>
         <a href="">
