--- a/Pagine/MenuArticoli.html
+++ b/Pagine/MenuArticoli.html
@@ -27,6 +27,13 @@
         </div>
         <!--BARRA DI SOPRA-->
         <!--Articoli-->
+        <a href="ArticoliScuola/Javascript.html">
+            <div class="boxArticoli">
+                <h1>JavaScript</h1>
+                <p>In questo articolo parleremo di JavaScript!</p>   
+            <img src="../Immagini/Javascript.png" height=250px>
+        </div>
+
         <a href="ArticoliScuola/SistemiOperativi.html">
         <div class="boxArticoli">
             <h1>Linux</h1>
