--- a/Pagine/ArticoliScuola/Javascript.html
+++ b/Pagine/ArticoliScuola/Javascript.html
@@ -30,7 +30,12 @@
         <!--BARRA DI SOPRA-->
         <div class="casellaTesto">
             <h1>JavaScript!</h1>
-            <p></p>
+            <p>Qua ci saranno 5 pulsanti!</p> 
+            <button id="button1" onclick="tabellina1()">click</button>
+            <button id="button2" onclick="tabellina2()">click</button>
+            <button id="button3" onclick="tabellina3()">click</button>
+            <button id="button4" onclick="tabellina4()">click</button>
+            <button id="button5" onclick="tabellina5()">click</button>
         </div>
     </body>
 </html>
