--- a/Pagine/ArticoliScuola/Javascript.html
+++ b/Pagine/ArticoliScuola/Javascript.html
@@ -37,5 +37,8 @@
             <button id="button4" onclick="tabellina4()">click</button>
             <button id="button5" onclick="tabellina5()">click</button>
         </div>
+        <!--Barra sotto-->
+        <div id="barraSotto">
+        </div>
     </body>
 </html>
