--- a/Pagine/ArticoliScuola/Javascript.html
+++ b/Pagine/ArticoliScuola/Javascript.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> Linux </title>
+        <title> JavaScript </title>
         <meta charset="UTF-8">
         <meta http-equiv="Content-type" content="text/html; charset=UTF-8">
         <link rel="stylesheet" href="../../css/style.css">
