--- a/Pagine/ArticoliScuola/Javascript.html
+++ b/Pagine/ArticoliScuola/Javascript.html
@@ -31,6 +31,7 @@
         <div class="casellaTesto">
             <h1>JavaScript!</h1>
             <p>Qua ci saranno 5 pulsanti!</p> 
+            <p id="tabellina">Le tabelline usciranno qui!</p>
             <button id="button1" onclick="tabellina1()">click</button>
             <button id="button2" onclick="tabellina2()">click</button>
             <button id="button3" onclick="tabellina3()">click</button>
