--- a/Pagine/MenuArticoli.html
+++ b/Pagine/MenuArticoli.html
@@ -24,9 +24,18 @@
             <a href="../index.html">
             <img src="../Immagini/home.png" id="immagine"> 
             </a>
+            
         </div>
         <!--BARRA DI SOPRA-->
         <!--Articoli-->
+
+        <a href="Pagine/ArticoliScuola/Verifica/verifica.html">
+            <div class="boxArticoli">
+                <h1>Verifica.</h1>
+                <p>Verifica</p>   
+            <img src="../Immagini/verifica.jpg" height=250px>
+        </div>
+
         <a href="ArticoliScuola/Javascript.html">
             <div class="boxArticoli">
                 <h1>JavaScript</h1>
