--- a/Pagine/MenuArticoli.html
+++ b/Pagine/MenuArticoli.html
@@ -33,7 +33,7 @@
             <div class="boxArticoli">
                 <h1>Verifica.</h1>
                 <p>Verifica</p>   
-            <img src="../Immagini/verifica.jpg" height=250px>
+            <img src="../Immagini/verifica.jpg" height=250px width=250px>
         </div>
 
         <a href="ArticoliScuola/Javascript.html">
