--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="boxArticoli" style="margin-top: 30px">
         <h1>Verifica.</h1>
         <p>Verifica</p>
-        <img src="Immagini/verifica.jpg" height="250px" />
+        <img src="Immagini/verifica.jpg" height="250px" width="250px" />
       </div>
     </a>
 
