--- a/Pagine/MenuArticoli.html
+++ b/Pagine/MenuArticoli.html
@@ -29,6 +29,13 @@
         <!--BARRA DI SOPRA-->
         <!--Articoli-->
 
+        <a href="ArticoliScuola/Javascript2.html">
+            <div class="boxArticoli">
+                <h1>JavaScript 2</h1>
+                <p>In questo articolo userò JavaScript per sostituire una immagine</p>   
+            <img src="../Immagini/Javascript.png" height=250px width=250px>
+        </div>
+
         <a href="ArticoliScuola/Verifica/verifica.html">
             <div class="boxArticoli">
                 <h1>Verifica.</h1>
