--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
       </div>
     </a>
 
-    <a href="">
+    <a href="Pagine/ArticoliScuola/Javascript2.html">
       <div class="boxArticoli" style="margin-top: 30px">
-        <h1>In arrivo...</h1>
-        <p>Aspetta solo un pò!</p>
-
-        <img src="Immagini/loading.gif" height="250px" />
+        <h1>JavaScript 2</h1>
+        <p>In questo articolo userò JavaScript per sostituire una immagine</p>   
+        <img src="Immagini/Javascript.png" height="250px" width="250px" />
       </div>
     </a>
+
     <a href="">
       <div class="boxArticoli" style="margin-top: 30px">
         <h1>In arrivo...</h1>
