--- a/Pagine/MenuArticoli.html
+++ b/Pagine/MenuArticoli.html
@@ -29,6 +29,14 @@
         <!--BARRA DI SOPRA-->
         <!--Articoli-->
 
+        <a href="ArticoliScuola/Javascript3.html">
+            <div class="boxArticoli">
+                <h1>JavaScript 3</h1>
+                <p>In questo articolo moltiplico</p>   
+            <img src="../Immagini/Javascript.png" height=250px width=250px>
+        </div>
+
+
         <a href="ArticoliScuola/Javascript2.html">
             <div class="boxArticoli">
                 <h1>JavaScript 2</h1>
