--- a/index.html
+++ b/index.html
@@ -69,14 +69,12 @@
       </div>
     </a>
 
-    <a href="">
-      <div class="boxArticoli" style="margin-top: 30px">
-        <h1>In arrivo...</h1>
-        <p>Aspetta solo un pò!</p>
-
-        <img src="Immagini/loading.gif" height="250px" />
-      </div>
-    </a>
+    <a href="Pagine/ArticoliScuola/Javascript3.html">
+      <div class="boxArticoli">
+          <h1>JavaScript 3</h1>
+          <p>In questo articolo moltiplico</p>   
+      <img src="../Immagini/Javascript.png" height=250px width=250px>
+    </div>
     <!--Top 5 articoli-->
     <!--Barra sotto-->
     <div id="barraSotto"></div>
