--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
     </a>
 
     <a href="Pagine/ArticoliScuola/Javascript3.html">
-      <div class="boxArticoli">
+      <div class="boxArticoli" style="margin-top: 30px">
           <h1>JavaScript 3</h1>
           <p>In questo articolo moltiplico</p>   
-      <img src="../Immagini/Javascript.png" height=250px width=250px>
+      <img src="Immagini/Javascript.png" height=250px width=250px>
     </div>
     <!--Top 5 articoli-->
     <!--Barra sotto-->
