--- a/Pagine/ArticoliScuola/Javascript3.html
+++ b/Pagine/ArticoliScuola/Javascript3.html
@@ -32,7 +32,8 @@
             <h1>Moltiplicazione tra A e B </h1>
             <form id="frm1" >
              A: <input type="text" name="Hbase" value="1"><br>
-             B: <input type="text" name="HArrivo" value="1"><br><br>
+             B: <input type="text" name="HArrivo" value="1"><br>
+             C: <input type="text" name="HBase1" value="1"><br><br>
              <!-- <input type="submit" value="Input dati Trekking">-->
             </form>
             
@@ -43,9 +44,13 @@
             <p id="base"></p>
             <p>B:</p>
             <p id="arrivo"></p>
-            
-            La moltiplicazione è:
+            <p>C:</p>
+            <p id="base1"></p>
+            <hr>
+            Il numero più grande è:
             <p id="demo"></p>
+            Il numero max è:
+            <p id="demo1"></p>
         </div>
         <!--Barra sotto-->
         <div id="barraSotto">
