--- a/Pagine/ArticoliScuola/Javascript3.html
+++ b/Pagine/ArticoliScuola/Javascript3.html
@@ -47,7 +47,7 @@
             <p>C:</p>
             <p id="base1"></p>
             <hr>
-            Il numero più grande è:
+            La Moltiplicazione è:
             <p id="demo"></p>
             Il numero max è:
             <p id="demo1"></p>
