--- a/Pagine/ArticoliScuola/Javascript4.html
+++ b/Pagine/ArticoliScuola/Javascript4.html
@@ -30,18 +30,21 @@
         </a>
     </div>
     <!--BARRA DI SOPRA-->
-    <div>
-        <div id="box1" class="rosso">
-            <button onclick="cambiacolore1()" class="bottone">Cambia colore</button>
+    <div class="casellaTesto">
+        <div class="rosso">
+            <button id="box1" onclick="cambiacolore1()" class="bottone">Cambia colore</button>
         </div>
-        <div id="box2" class="verde">
-            <button onclick="cambiacolore1()" class="bottone">Cambia colore</button>
+        <div class="verde">
+            <button id="box2" onclick="cambiacolore2()" class="bottone">Cambia colore</button>
         </div>
-        <div id="box3" class="blue">
-            <button onclick="cambiacolore1()" class="bottone">Cambia colore</button>
+        <div class="blue">
+            <button id="box3" onclick="cambiacolore3()" class="bottone">Cambia colore</button>
         </div>
-        <div id="box4" class="giallo">
-            <button onclick="cambiacolore1()" class="bottone">Cambia colore</button>
+        <div class="giallo">
+            <button id="box4" onclick="cambiacolore4()" class="bottone">Cambia colore</button>
+        </div>
+        <div id="boxColore">
+
         </div>
     </div>
 </body>
