--- a/Pagine/MenuArticoli.html
+++ b/Pagine/MenuArticoli.html
@@ -30,6 +30,15 @@
     </div>
     <!--BARRA DI SOPRA-->
     <!--Articoli-->
+
+    <a href="ArticoliScuola/Javascript5.html">
+        <div class="boxArticoli">
+            <h1>JavaScript 5</h1>
+            <p>In questo articolo cambio il del numero 6 (viene stampato 1000 volte)</p>
+            <img src="../Immagini/Javascript.png" height=250px>
+        </div>
+    </a>
+
     <a href="ArticoliScuola/Javascript4.html">
         <div class="boxArticoli">
             <h1>JavaScript 4</h1>
