--- a/Pagine/MenuArticoli.html
+++ b/Pagine/MenuArticoli.html
@@ -31,6 +31,14 @@
     <!--BARRA DI SOPRA-->
     <!--Articoli-->
 
+    <a href="ArticoliScuola/Javascript6.html">
+        <div class="boxArticoli">
+            <h1>JavaScript 6</h1>
+            <p>In questo articolo cronometro :)</p>
+            <img src="../Immagini/Javascript.png" height=250px>
+        </div>
+    </a>
+
     <a href="ArticoliScuola/Javascript5.html">
         <div class="boxArticoli">
             <h1>JavaScript 5</h1>
