--- a/Pagine/ArticoliScuola/Javascript8.html
+++ b/Pagine/ArticoliScuola/Javascript8.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="Content-type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="../../css/style.css" />
-    <script src="../../JS/script5.js"></script>
-    <link rel="stylesheet" href="../../css/articolojava4.css" />
+    <script src="../../JS/script8.js"></script>
+    <link rel="stylesheet" href="../../css/articolojava8.css" />
   </head>
 
-  <body>
+  <body onLoad="colori()" onLoad="accelera()">
     <!-- BARRA DI SOPRA-->
     <div id="barraSopra">
       <a href="../ChiSono.html">
@@ -29,8 +29,7 @@
       </a>
     </div>
     <!--BARRA DI SOPRA-->
-    <div class="casellaTesto">
-      <p id="output"></p>
-    </div>
+    <div id="B"></div>
+    <div id="A"></div>
   </body>
 </html>
