--- a/Pagine/ArticoliScuola/Javascript9.html
+++ b/Pagine/ArticoliScuola/Javascript9.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../../css/articolojava9.css" />
 </head>
 
-<body onLoad="colori()" onLoad="accelera()">
+<body>
     <!-- BARRA DI SOPRA-->
     <div id="barraSopra">
         <a href="../ChiSono.html">
