--- a/Pagine/MenuArticoli.html
+++ b/Pagine/MenuArticoli.html
@@ -31,6 +31,14 @@
     <!--BARRA DI SOPRA-->
     <!--Articoli-->
 
+    <a href="ArticoliScuola/Javascript10.html">
+        <div class="boxArticoli">
+            <h1>Covid 10</h1>
+            <p>coviddo</p>
+            <img src="../Immagini/Javascript.png" height=250px>
+        </div>
+    </a>
+
     <a href="ArticoliScuola/Javascript7.html">
         <div class="boxArticoli">
             <h1>JavaScript 7</h1>
