--- a/Pagine/ArticoliScuola/Javascript13.html
+++ b/Pagine/ArticoliScuola/Javascript13.html
@@ -11,8 +11,8 @@
         border-color: black;
         border: 5px solid;
         float: left;
-        width: 100px;
-        height: 100px;
+        width: 98px;
+        height: 98px;
       }
     </style>
     <script>
@@ -34,12 +34,176 @@
             a[randomquadrato].style.backgroundColor = "rgb(255,255,255)";
             a[randomquadrato].style.borderColor = "rgb(255,255,255)";
           }
-        }, 10);
+        }, 1);
       }
     </script>
   </head>
 
   <body onload="cambiaColore()">
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
+    <div name="A" class="blu"></div>
     <div name="A" class="blu"></div>
     <div name="A" class="blu"></div>
     <div name="A" class="blu"></div>
