--- a/index.html
+++ b/index.html
@@ -1,82 +1,99 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="Content-type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet" href="css/style.css" />
-    <title>Home</title>
-  </head>
-  <body>
-    <!-- BARRA DI SOPRA-->
-    <div id="barraSopra">
-      <a href="Pagine/ChiSono.html">
-        <div class="pulsante">
-          <h1>Chi sono</h1>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <title>Document</title>
+</head>
+
+<body style="background-color: #F9FBF2;">
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #0E1C36" ;>
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="/docs/5.0/assets/brand/bootstrap-logo.svg" alt="" width="30" height="24"
+                    class="d-inline-block align-text-top">
+                Eserciziario
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Info</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">TIPSIT</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Sistemi</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </a>
+    </nav>
 
-      <a href="Pagine/MenuArticoli.html">
-        <div class="pulsante">
-          <h1>Articoli</h1>
+    <div class="container my-5 text-center" style="max-width:580px;">
+        <h1>Eserciziario</h1>
+        <p class="lead">gabi</p>
+        <div class="btn-group" role="group" aria-label="Basic example">
+            <button type="button" class="btn btn-outline-primary">GitHub</button>
+            <button type="button" class="btn btn-outline-primary">Email </button>
         </div>
-      </a>
-
-      <a href="index.html">
-        <img src="Immagini/home.png" id="immagine" />
-      </a>
-    </div>
-    <!--BARRA DI SOPRA-->
-    <!--Top 5 articoli-->
-    <div class="casellaTesto">
-      <h1 style="text-align: center">
-        <b>I MIEI 5 ARTICOLI PIU' IMPORTANTI</b>
-      </h1>
     </div>
 
-    <a href="Pagine/ArticoliScuola/Javascript.html">
-      <div class="boxArticoli" style="margin-top: 30px">
-        <h1>JavaScript</h1>
-        <p>In questo articolo parleremo di JavaScript!</p>
-        <img src="Immagini/Javascript.png" height="250px" />
-      </div>
-    </a>
-
-    <a href="Pagine/ArticoliScuola/SistemiOperativi.html">
-      <div class="boxArticoli" style="margin-top: 30px">
-        <h1>Linux</h1>
-        <p>
-          In questo articolo parleremo del sistema operativo Linux e delle sue
-          varianti
-        </p>
-
-        <img src="Immagini/linux.jpg" height="250px" />
-      </div>
-    </a>
-
-    <a href="Pagine/ArticoliScuola/Verifica/verifica.html">
-      <div class="boxArticoli" style="margin-top: 30px">
-        <h1>Verifica.</h1>
-        <p>Verifica</p>
-        <img src="Immagini/verifica.jpg" height="250px" width="250px" />
-      </div>
-    </a>
-
-    <a href="Pagine/ArticoliScuola/Javascript2.html">
-      <div class="boxArticoli" style="margin-top: 30px">
-        <h1>JavaScript 2</h1>
-        <p>In questo articolo userò JavaScript per sostituire una immagine</p>   
-        <img src="Immagini/Javascript.png" height="250px" width="250px" />
-      </div>
-    </a>
-
-    <a href="Pagine/ArticoliScuola/Javascript3.html">
-      <div class="boxArticoli" style="margin-top: 30px">
-          <h1>JavaScript 3</h1>
-          <p>In questo articolo moltiplico</p>   
-      <img src="Immagini/Javascript.png" height=250px width=250px>
+    <div class="container text-center">
+        <div class="row">
+            <div class="col">
+                <div class="card mx-auto" style="width: 18rem; background-color: #FFEDE1;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's
+                            content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card mx-auto" style="width: 18rem; background-color: #FFEDE1;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's
+                            content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card mx-auto" style="width: 18rem; background-color: #FFEDE1;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's
+                            content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <!--Top 5 articoli-->
-    <!--Barra sotto-->
-    <div id="barraSotto"></div>
-  </body>
+</body>
+
 </html>
