BS esercizio modificati + Paginazione tipsit

--- a/Pagine/ArticoliScuola/SistemiOperativi.html
+++ b/Pagine/ArticoliScuola/SistemiOperativi.html
@@ -33,6 +33,11 @@
         </a>
     </div>
     <!--BARRA DI SOPRA-->
+    <!--Barra di sotto-->
+    <nav class="navbar fixed-bottom navbar-dark" style="background-color: #0E1C36">
+        <div class="container-fluid">
+        </div>
+    </nav>
 </body>
 
 </html>
