--- a/Pagine/ChiSono.html
+++ b/Pagine/ChiSono.html
@@ -1,53 +1,65 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title> Chi Sono</title>
-        <meta charset="UTF-8">
-        <meta http-equiv="Content-type" content="text/html; charset=UTF-8">
-        <link rel="stylesheet" href="../css/style.css">
-    </head>
-    <body>
-        <!-- BARRA DI SOPRA-->
+
+<head>
+    <title> Chi Sono</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="Content-type" content="text/html; charset=UTF-8">
+    <link rel="stylesheet" href="../css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+</head>
+
+<body>
+    <!-- BARRA DI SOPRA-->
     <div id="barraSopra">
         <a href="ChiSono.html">
-        <div class="pulsante">
-            <h1>Chi sono</h1>
-        </div>
+            <div class="pulsante">
+                <h1>Chi sono</h1>
+            </div>
         </a>
 
-        <a href="MenuArticoli.html"> 
-        <div class="pulsante"> 
-            <h1>Articoli</h1>
-        </div>
+        <a href="MenuArticoli.html">
+            <div class="pulsante">
+                <h1>Articoli</h1>
+            </div>
         </a>
 
         <a href="../index.html">
-        <img src="../Immagini/home.png" id="immagine"> 
+            <img src="../Immagini/home.png" id="immagine">
         </a>
     </div>
-        <!--BARRA DI SOPRA-->
-        <div class="casellaTesto">
+    <!--BARRA DI SOPRA-->
+    <div class="casellaTesto">
         <h1>Chi sono <br> </h1>
-        <p>Sono uno studento della 3B INFO, ho 16 anni, il mio hobby è il nuoto e la programmazione. Il nostro professore è Marco Palladino. </p>
+        <p>Sono uno studento della 3B INFO, ho 16 anni, il mio hobby è il nuoto e la programmazione. Il nostro
+            professore è Marco Palladino. </p>
         <p>Nato: 07:30/8/8/2005 </p>
         <p>Residenza: Italia </p>
-        </div>
+    </div>
 
-        <a href="https://github.com/Ricaldone-Gabriel">
+    <a href="https://github.com/Ricaldone-Gabriel">
         <div class="casellaInfo">
             <h1><br></h1>
             <img src="../Immagini/github.png" id="immagineInfo">
         </div>
-        </a>
+    </a>
 
-        <a href="">
-            <div class="casellaInfo">
-                <h1>In arrivo</h1>
-                <img src="../Immagini/loading.gif" id="immagineInfo">
-            </div>
-        </a>
-        <!--Barra sotto-->
-        <div id="barraSotto">
+    <a href="">
+        <div class="casellaInfo">
+            <h1>In arrivo</h1>
+            <img src="../Immagini/loading.gif" id="immagineInfo">
         </div>
-    </body>
+    </a>
+    <!--Barra sotto-->
+    <!--Barra di sotto-->
+    <nav class="navbar fixed-bottom navbar-dark" style="background-color: #0E1C36">
+        <div class="container-fluid">
+        </div>
+    </nav>
+</body>
+
 </html>
