--- a/TIPSIT.html
+++ b/TIPSIT.html
@@ -18,8 +18,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark shadow p-3 mb-5" style="background-color: #0E1C36" ;>
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="/docs/5.0/assets/brand/bootstrap-logo.svg" alt="" width="30" height="24"
-                    class="d-inline-block align-text-top">
+                <img src="Immagini/LogoEpico.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
                 Gabriel Ricaldone
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -54,31 +53,131 @@
         <div class="row">
             <div class="col">
                 <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #FFEDE1;">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Info</h5>
-                        <p class="card-text">Qua ci sono degli esercizi! <br> Qua ci sarà informatica.</p>
-                        <a href="#" class="btn btn-primary">Informati!</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #FFEDE1;">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Sistemi</h5>
-                        <p class="card-text">Qua ci sono degli esercizi! <br> Qua ci sarà Assembly.</p>
-                        <a href="#" class="btn btn-primary">Sistemati!</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #FFEDE1;">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="Immagini/Javascript.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Tipsit</h5>
                         <p class="card-text">Qua ci sono degli esercizi! <br> Qua ci sarà HTML e JS.</p>
-                        <a href="#" class="btn btn-primary">Si!</a>
+                        <a href="Pagine/ArticoliScuola/Javascript14.html" class="btn btn-primary">Si!</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #FFEDE1;">
+                    <img src="Immagini/Javascript.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Tipsit</h5>
+                        <p class="card-text">Qua ci sono degli esercizi! <br> Qua ci sarà HTML e JS.</p>
+                        <a href="Pagine/ArticoliScuola/Javascript13.html" class="btn btn-primary">Si!</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #FFEDE1;">
+                    <img src="Immagini/Javascript.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Tipsit</h5>
+                        <p class="card-text">Qua ci sono degli esercizi! <br> Qua ci sarà HTML e JS.</p>
+                        <a href="Pagine/ArticoliScuola/Javascript12.html" class="btn btn-primary">Si!</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #FFEDE1;">
+                    <img src="Immagini/Javascript.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Tipsit</h5>
+                        <p class="card-text">Qua ci sono degli esercizi! <br> Qua ci sarà HTML e JS.</p>
+                        <a href="Pagine/ArticoliScuola/Javascript11.html" class="btn btn-primary">Si!</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #FFEDE1;">
+                    <img src="Immagini/Javascript.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Tipsit</h5>
+                        <p class="card-text">Qua ci sono degli esercizi! <br> Qua ci sarà HTML e JS.</p>
+                        <a href="Pagine/ArticoliScuola/Javascript10.html" class="btn btn-primary">Si!</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #FFEDE1;">
+                    <img src="Immagini/Javascript.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Tipsit</h5>
+                        <p class="card-text">Qua ci sono degli esercizi! <br> Qua ci sarà HTML e JS.</p>
+                        <a href="Pagine/ArticoliScuola/Javascript9.html" class="btn btn-primary">Si!</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #FFEDE1;">
+                    <img src="Immagini/Javascript.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Tipsit</h5>
+                        <p class="card-text">Qua ci sono degli esercizi! <br> Qua ci sarà HTML e JS.</p>
+                        <a href="Pagine/ArticoliScuola/Javascript8.html" class="btn btn-primary">Si!</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #FFEDE1;">
+                    <img src="Immagini/Javascript.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Tipsit</h5>
+                        <p class="card-text">Qua ci sono degli esercizi! <br> Qua ci sarà HTML e JS.</p>
+                        <a href="Pagine/ArticoliScuola/Javascript7.html" class="btn btn-primary">Si!</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #FFEDE1;">
+                    <img src="Immagini/Javascript.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Tipsit</h5>
+                        <p class="card-text">Qua ci sono degli esercizi! <br> Qua ci sarà HTML e JS.</p>
+                        <a href="Pagine/ArticoliScuola/Javascript5.html" class="btn btn-primary">Si!</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #FFEDE1;">
+                    <img src="Immagini/Javascript.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Tipsit</h5>
+                        <p class="card-text">Qua ci sono degli esercizi! <br> Qua ci sarà HTML e JS.</p>
+                        <a href="Pagine/ArticoliScuola/Javascript4.html" class="btn btn-primary">Si!</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #FFEDE1;">
+                    <img src="Immagini/Javascript.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Tipsit</h5>
+                        <p class="card-text">Qua ci sono degli esercizi! <br> Qua ci sarà HTML e JS.</p>
+                        <a href="Pagine/ArticoliScuola/Javascript3.html" class="btn btn-primary">Si!</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #FFEDE1;">
+                    <img src="Immagini/Javascript.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Tipsit</h5>
+                        <p class="card-text">Qua ci sono degli esercizi! <br> Qua ci sarà HTML e JS.</p>
+                        <a href="Pagine/ArticoliScuola/Javascript2.html" class="btn btn-primary">Si!</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #FFEDE1;">
+                    <img src="Immagini/Javascript.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Tipsit</h5>
+                        <p class="card-text">Qua ci sono degli esercizi! <br> Qua ci sarà HTML e JS.</p>
+                        <a href="Pagine/ArticoliScuola/Javascript.html" class="btn btn-primary">Si!</a>
                     </div>
                 </div>
             </div>
