--- a/Pagine/ArticoliScuola/Javascript.html
+++ b/Pagine/ArticoliScuola/Javascript.html
@@ -20,7 +20,7 @@
         <div class="container-fluid">
 
             <a class="navbar-brand" href="#">
-                <img src="/docs/5.0/assets/brand/bootstrap-logo.svg" alt="" width="30" height="24"
+                <img src="../../Immagini/LogoEpico.png" alt="" width="30" height="24"
                     class="d-inline-block align-text-top">
                 Gabriel Ricaldone
             </a>
@@ -34,16 +34,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="../../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Info.html">Info</a>
+                        <a class="nav-link" href="../../Info.html">Info</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="TIPSIT.html">TIPSIT</a>
+                        <a class="nav-link" href="../../TIPSIT.html">TIPSIT</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Sistemi.html">Sistemi</a>
+                        <a class="nav-link" href="../../Sistemi.html">Sistemi</a>
                     </li>
                 </ul>
             </div>
