--- a/Pagine/ArticoliScuola/Javascript3.html
+++ b/Pagine/ArticoliScuola/Javascript3.html
@@ -15,26 +15,42 @@
         crossorigin="anonymous"></script>
 </head>
 
-<body>
-    <!-- BARRA DI SOPRA-->
-    <div id="barraSopra">
-        <a href="../ChiSono.html">
-            <div class="pulsante">
-                <h1>Chi sono</h1>
-            </div>
-        </a>
+<body style="background-color: #F9FBF2;">
+    <nav class="navbar navbar-expand-lg navbar-dark shadow p-3 mb-5" style="background-color: #0E1C36" ;>
+        <div class="container-fluid">
 
-        <a href="../MenuArticoli.html">
-            <div class="pulsante">
-                <h1>Articoli</h1>
-            </div>
-        </a>
+            <a class="navbar-brand" href="#">
+                <img src="../../Immagini/LogoEpico.png" alt="" width="30" height="24"
+                    class="d-inline-block align-text-top">
+                Gabriel Ricaldone
+            </a>
 
-        <a href="../../index.html">
-            <img src="../../Immagini/home.png" id="immagine">
-        </a>
-    </div>
-    <!--BARRA DI SOPRA-->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="../../index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../../Info.html">Info</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../../TIPSIT.html">TIPSIT</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../../Sistemi.html">Sistemi</a>
+                    </li>
+                </ul>
+            </div>
+
+        </div>
+    </nav>
+    <!--Barra di sopra-->
     <div class="casellaTesto">
         <h1>Moltiplicazione tra A e B </h1>
         <form id="frm1">
@@ -59,8 +75,10 @@
         Il numero max è:
         <p id="demo1"></p>
     </div>
-    <!--Barra sotto-->
-    <div id="barraSotto">
-    </div>
+    <!--Barra di sotto-->
+    <nav class="navbar fixed-bottom navbar-dark" style="background-color: #0E1C36">
+        <div class="container-fluid">
+        </div>
+    </nav>
 </body>
 </html2
