--- a/index.html
+++ b/index.html
@@ -1,104 +1,169 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+    <!--test-->
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="css/stylesheet.css" type="text/css" />
+    <!--test-->
     <title>Home</title>
     <script src="JS/scriptHome.js"></script>
-</head>
+  </head>
 
-<body style="background-color: #F9FBF2;">
-    <nav class="navbar navbar-expand-lg navbar-dark shadow p-3 mb-5" style="background-color: #0E1C36" ;>
-        <div class="container-fluid">
+  <body style="background-color: #f9fbf2">
+    <nav
+      class="navbar navbar-expand-lg navbar-dark shadow p-3 mb-5"
+      style="background-color: #0e1c36"
+      ;
+    >
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img
+            src="Immagini/LogoEpico.png"
+            alt=""
+            width="30"
+            height="24"
+            class="d-inline-block align-text-top"
+          />
+          Gabriel Ricaldone
+        </a>
 
-            <a class="navbar-brand" href="#">
-                <img src="Immagini/LogoEpico.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
-                Gabriel Ricaldone
-            </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Info.html">Info</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="TIPSIT.html">TIPSIT</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Sistemi.html">Sistemi</a>
-                    </li>
-                </ul>
-            </div>
-
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Info.html">Info</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="TIPSIT.html">TIPSIT</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Sistemi.html">Sistemi</a>
+            </li>
+          </ul>
         </div>
+      </div>
     </nav>
     <!--Barra di sopra-->
 
-    <div class="container my-5 text-center" style="max-width:580px;">
-        <h1>Eserciziario</h1>
-        <p class="lead">Qua ci saranno tutti gli ES</p>
-        <div class="btn-group" role="group" aria-label="Basic example">
-            <a href="https://github.com/Ricaldone-Gabriel/SitoAltervista" class="btn btn-outline-primary">Github</a>
-            <button type="button" onclick="copia()" class="btn btn-outline-primary">Email </button>
-        </div>
+    <div class="container my-5 text-center" style="max-width: 580px">
+      <h1>Eserciziario</h1>
+      <p class="lead">Qua ci saranno tutti gli ES</p>
+      <div class="btn-group" role="group" aria-label="Basic example">
+        <a
+          href="https://github.com/Ricaldone-Gabriel/SitoAltervista"
+          class="btn btn-outline-primary"
+          >Github</a
+        >
+        <button type="button" onclick="copia()" class="btn btn-outline-primary">
+          Email
+        </button>
+      </div>
     </div>
 
     <div class="container text-center">
-        <div class="row">
-            <div class="col">
-                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #FFEDE1;">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Info</h5>
-                        <p class="card-text">Qua ci sono degli esercizi! <br> Qua ci sarà informatica.</p>
-                        <a href="Info.html" class="btn btn-primary">Informati!</a>
-                    </div>
-                </div>
+      <div class="row">
+        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 container_foto mx-auto"> 
+            <a href="TIPSIT.html">
+            <div class="ver_mas text-center">
+              <span class="lnr lnr-eye"></span>
             </div>
-            <div class="col">
-                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #FFEDE1;">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Sistemi</h5>
-                        <p class="card-text">Qua ci sono degli esercizi! <br> Qua ci sarà Assembly.</p>
-                        <a href="Sistemi.html" class="btn btn-primary">Sistemati!</a>
-                    </div>
-                </div>
+            <article class="text-left">
+              <h2>TIPSIT</h2>
+              <h4>Esercizi fatti con Palladino e Paiola</h4>
+            </article>
+            <img
+              src="Immagini/Javascript.png"
+              alt=""
+            />
+        </a>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 container_foto mx-auto">
+            <div class="ver_mas text-center">
+              <span class="lnr lnr-eye"></span>
             </div>
-            <div class="col">
-                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #FFEDE1;">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Tipsit</h5>
-                        <p class="card-text">Qua ci sono degli esercizi! <br> Qua ci sarà HTML e JS.</p>
-                        <a href="TIPSIT.html" class="btn btn-primary">Si!</a>
-                    </div>
-                </div>
+            <article class="text-left">
+              <h2>C++</h2>
+              <h4>Esercizi fatti con Greco</h4>
+            </article>
+            <img
+              src="Immagini/cplusplus.png"
+              alt=""
+            />
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 container_foto mx-auto">
+            <div class="ver_mas text-center">
+              <span class="lnr lnr-eye"></span>
             </div>
+            <article class="text-left">
+              <h2>Sistemi</h2>
+              <h4>Esercizi fatti con Maiolati e Macchiavelli</h4>
+            </article>
+            <img
+              src="https://img-aws.ehowcdn.com/400x400/ds-img.studiod.com/Half_Dome_from_Glacier_Point0_1.jpg"
+              alt=""
+            />
+          </div>
+          
         </div>
+      </div>
     </div>
 
     <!--Barra di sotto-->
-    <nav class="navbar fixed-bottom navbar-dark" style="background-color: #0E1C36">
-        <div class="container-fluid">
-        </div>
+    <nav
+      class="navbar fixed-bottom navbar-dark"
+      style="background-color: #0e1c36"
+    >
+      <div class="container-fluid"></div>
     </nav>
-</body>
-
+  </body>
 </html>
