File cpp scaricabile e cambio colore

--- a/Info.html
+++ b/Info.html
@@ -58,7 +58,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Info</h5>
                         <p class="card-text">Qua ci sono degli esercizi! <br> Qua ci sarà informatica.</p>
-                        <a href="#" class="btn btn-primary">Informati!</a>
+                        <a href="C++/SenzaTitolo2.cpp" download class="btn btn-primary">Informati!</a>
                     </div>
                 </div>
             </div>
