--- a/TIPSIT.html
+++ b/TIPSIT.html
@@ -52,7 +52,7 @@
     <div class="container text-center">
         <div class="row">
             <div class="col">
-                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #FFEDE1;">
+                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #fff9f5;">
                     <img src="Immagini/Javascript.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Tipsit</h5>
@@ -62,7 +62,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #FFEDE1;">
+                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #fff9f5;">
                     <img src="Immagini/Javascript.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Tipsit</h5>
@@ -72,7 +72,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #FFEDE1;">
+                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #fff9f5;">
                     <img src="Immagini/Javascript.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Tipsit</h5>
@@ -82,7 +82,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #FFEDE1;">
+                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #fff9f5;">
                     <img src="Immagini/Javascript.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Tipsit</h5>
@@ -92,7 +92,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #FFEDE1;">
+                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #fff9f5;">
                     <img src="Immagini/Javascript.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Tipsit</h5>
@@ -102,7 +102,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #FFEDE1;">
+                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #fff9f5;">
                     <img src="Immagini/Javascript.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Tipsit</h5>
@@ -112,7 +112,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #FFEDE1;">
+                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #fff9f5;">
                     <img src="Immagini/Javascript.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Tipsit</h5>
@@ -122,7 +122,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #FFEDE1;">
+                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #fff9f5;">
                     <img src="Immagini/Javascript.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Tipsit</h5>
@@ -132,7 +132,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #FFEDE1;">
+                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #fff9f5;">
                     <img src="Immagini/Javascript.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Tipsit</h5>
@@ -142,7 +142,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #FFEDE1;">
+                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #fff9f5;">
                     <img src="Immagini/Javascript.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Tipsit</h5>
@@ -152,7 +152,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #FFEDE1;">
+                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #fff9f5;">
                     <img src="Immagini/Javascript.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Tipsit</h5>
@@ -162,7 +162,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #FFEDE1;">
+                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #fff9f5;">
                     <img src="Immagini/Javascript.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Tipsit</h5>
@@ -172,7 +172,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #FFEDE1;">
+                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #fff9f5;">
                     <img src="Immagini/Javascript.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Tipsit</h5>
