Card sistemi funzionante

--- a/index.html
+++ b/index.html
@@ -104,15 +104,15 @@
       </div>
 
       <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 container_foto mx-auto">
-        <a href="Sistemi.html"></a>
-        <div class="ver_mas text-center">
-          <span class="lnr lnr-eye">Click!</span>
-        </div>
-        <article class="text-left">
-          <h2>Sistemi</h2>
-          <h4>Esercizi fatti con Maiolati e Macchiavelli</h4>
-        </article>
-        <img src="Immagini/Sistemi.jpg" alt="" />
+        <a href="manutenzione.html">
+          <div class="ver_mas text-center">
+            <span class="lnr lnr-eye">Click!</span>
+          </div>
+          <article class="text-left">
+            <h2>Sistemi</h2>
+            <h4>Esercizi fatti con Maiolati e Macchiavelli</h4>
+          </article>
+          <img src="Immagini/Sistemi.jpg" alt="" />
         </a>
       </div>
 
