Cambio info card

--- a/Info.html
+++ b/Info.html
@@ -55,33 +55,25 @@
     <div class="container text-center">
         <div class="row">
             <div class="col">
-                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #FFEDE1;">
-                    <img src="..." class="card-img-top" alt="...">
+                <div class="card mx-auto shadow p-3 mb-5 "
+                    style="width: 18rem; background-color: #fff9f5; height: 450px">
+                    <img src="Immagini/cplusplus.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Info</h5>
-                        <p class="card-text">Qua ci sono degli esercizi! <br> Qua ci sarà informatica.</p>
-                        <a href="C++/SenzaTitolo2.cpp" download class="btn btn-primary">Informati!</a>
+                        <h5 class="card-title">Matrice I</h5>
+                        <p class="card-text">Matrice temperatura</p>
                     </div>
+                    <a href="C++/MatriceTemperatura.cpp" download class="btn btn-primary">Informati!</a>
                 </div>
             </div>
             <div class="col">
-                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #FFEDE1;">
-                    <img src="..." class="card-img-top" alt="...">
+                <div class="card mx-auto shadow p-3 mb-5 "
+                    style="width: 18rem; background-color: #fff9f5; height: 450px">
+                    <img src="Immagini/cplusplus.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Sistemi</h5>
-                        <p class="card-text">Qua ci sono degli esercizi! <br> Qua ci sarà Assembly.</p>
-                        <a href="#" class="btn btn-primary">Sistemati!</a>
+                        <h5 class="card-title">Matrice II</h5>
+                        <p class="card-text">Numeri in NumeriCoppia</p>
                     </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #FFEDE1;">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Tipsit</h5>
-                        <p class="card-text">Qua ci sono degli esercizi! <br> Qua ci sarà HTML e JS.</p>
-                        <a href="#" class="btn btn-primary">Si!</a>
-                    </div>
+                    <a href="C++/NumeriCoppia.cpp" download class="btn btn-primary">Informati!</a>
                 </div>
             </div>
         </div>
