--- a/TIPSIT.html
+++ b/TIPSIT.html
@@ -55,133 +55,147 @@
     <div class="container text-center">
         <div class="row">
             <div class="col">
-                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #fff9f5;">
+                <div class="card mx-auto shadow p-3 mb-5"
+                    style="width: 18rem; background-color: #fff9f5; height: 450px">
                     <img src="Immagini/Javascript.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Tipsit</h5>
-                        <p class="card-text">Qua ci sono degli esercizi! <br> Qua ci sarà HTML e JS.</p>
-                        <a href="Pagine/ArticoliScuola/Javascript14.html" class="btn btn-primary">Si!</a>
+                        <h5 class="card-title">Javascript 14</h5>
+                        <p class="card-text">Caricare un array, numeri casuali, media ed il massimo.
+                        </p>
                     </div>
+                    <a href="Pagine/ArticoliScuola/Javascript14.html" class="btn btn-primary">Si!</a>
                 </div>
             </div>
             <div class="col">
-                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #fff9f5;">
+                <div class="card mx-auto shadow p-3 mb-5"
+                    style="width: 18rem; background-color: #fff9f5; height: 450px">
                     <img src="Immagini/Javascript.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Tipsit</h5>
-                        <p class="card-text">Qua ci sono degli esercizi! <br> Qua ci sarà HTML e JS.</p>
-                        <a href="Pagine/ArticoliScuola/Javascript13.html" class="btn btn-primary">Si!</a>
+                        <h5 class="card-title">Javascript 13</h5>
+                        <p class="card-text">Quadrati che vanno da bianco a blu e scompaiono.</p>
                     </div>
+                    <a href="Pagine/ArticoliScuola/Javascript13.html" class="btn btn-primary">Si!</a>
                 </div>
             </div>
             <div class="col">
-                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #fff9f5;">
-                    <img src="Immagini/Javascript.png" class="card-img-top" alt="...">
+                <div class="card mx-auto shadow p-3 mb-5"
+                    style="width: 18rem; background-color: #fff9f5; height: 450px">
+                    <img src="Immagini/controller.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Tipsit</h5>
-                        <p class="card-text">Qua ci sono degli esercizi! <br> Qua ci sarà HTML e JS.</p>
-                        <a href="Pagine/ArticoliScuola/Javascript12.html" class="btn btn-primary">Si!</a>
+                        <h5 class="card-title">Gioco</h5>
+                        <p class="card-text">Clicca quando appare il colore verde!</p>
                     </div>
+                    <a href="Pagine/ArticoliScuola/Javascript12.html" class="btn btn-primary">Si!</a>
                 </div>
             </div>
             <div class="col">
-                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #fff9f5;">
+                <div class="card mx-auto shadow p-3 mb-5"
+                    style="width: 18rem; background-color: #fff9f5; height: 450px">
                     <img src="Immagini/Javascript.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Tipsit</h5>
-                        <p class="card-text">Qua ci sono degli esercizi! <br> Qua ci sarà HTML e JS.</p>
-                        <a href="Pagine/ArticoliScuola/Javascript11.html" class="btn btn-primary">Si!</a>
+                        <h5 class="card-title">Javascript 11</h5>
+                        <p class="card-text">Media di un vettore.</p>
                     </div>
+                    <a href="Pagine/ArticoliScuola/Javascript11.html" class="btn btn-primary">Si!</a>
                 </div>
             </div>
             <div class="col">
-                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #fff9f5;">
-                    <img src="Immagini/Javascript.png" class="card-img-top" alt="...">
+                <div class="card mx-auto shadow p-3 mb-5"
+                    style="width: 18rem; background-color: #fff9f5; height: 450px">
+                    <img src="Immagini/coviddo.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Tipsit</h5>
-                        <p class="card-text">Qua ci sono degli esercizi! <br> Qua ci sarà HTML e JS.</p>
-                        <a href="Pagine/ArticoliScuola/Javascript10.html" class="btn btn-primary">Si!</a>
+                        <h5 class="card-title">Stampare genoma covid</h5>
+                        <p class="card-text">Quello che dice il titolo.</p>
                     </div>
+                    <a href="Pagine/ArticoliScuola/Javascript10.html" class="btn btn-primary">Si!</a>
                 </div>
             </div>
             <div class="col">
-                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #fff9f5;">
+                <div class="card mx-auto shadow p-3 mb-5"
+                    style="width: 18rem; background-color: #fff9f5; height: 450px">
                     <img src="Immagini/Javascript.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Tipsit</h5>
-                        <p class="card-text">Qua ci sono degli esercizi! <br> Qua ci sarà HTML e JS.</p>
-                        <a href="Pagine/ArticoliScuola/Javascript9.html" class="btn btn-primary">Si!</a>
+                        <h5 class="card-title">Javascript 9</h5>
+                        <p class="card-text">Clicca dopo 2s per far apparire un quadrato verde.</p>
                     </div>
+                    <a href="Pagine/ArticoliScuola/Javascript9.html" class="btn btn-primary">Si!</a>
                 </div>
             </div>
             <div class="col">
-                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #fff9f5;">
+                <div class="card mx-auto shadow p-3 mb-5"
+                    style="width: 18rem; background-color: #fff9f5; height: 450px">
                     <img src="Immagini/Javascript.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Tipsit</h5>
-                        <p class="card-text">Qua ci sono degli esercizi! <br> Qua ci sarà HTML e JS.</p>
-                        <a href="Pagine/ArticoliScuola/Javascript8.html" class="btn btn-primary">Si!</a>
+                        <h5 class="card-title">Javascript 8</h5>
+                        <p class="card-text">Quadrato che cambia colore in modo randomico.</p>
                     </div>
+                    <a href="Pagine/ArticoliScuola/Javascript8.html" class="btn btn-primary">Si!</a>
                 </div>
             </div>
             <div class="col">
-                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #fff9f5;">
+                <div class="card mx-auto shadow p-3 mb-5"
+                    style="width: 18rem; background-color: #fff9f5; height: 450px">
                     <img src="Immagini/Javascript.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Tipsit</h5>
-                        <p class="card-text">Qua ci sono degli esercizi! <br> Qua ci sarà HTML e JS.</p>
-                        <a href="Pagine/ArticoliScuola/Javascript7.html" class="btn btn-primary">Si!</a>
+                        <h5 class="card-title">Spiegazione codice</h5>
+                        <p class="card-text">Spiegazione del conta tempo.</p>
                     </div>
+                    <a href="Pagine/ArticoliScuola/Javascript7.html" class="btn btn-primary">Si!</a>
                 </div>
             </div>
             <div class="col">
-                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #fff9f5;">
+                <div class="card mx-auto shadow p-3 mb-5"
+                    style="width: 18rem; background-color: #fff9f5; height: 450px">
                     <img src="Immagini/Javascript.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Tipsit</h5>
-                        <p class="card-text">Qua ci sono degli esercizi! <br> Qua ci sarà HTML e JS.</p>
-                        <a href="Pagine/ArticoliScuola/Javascript5.html" class="btn btn-primary">Si!</a>
+                        <h5 class="card-title">Javascript 5</h5>
+                        <p class="card-text">Tirare un dado e segna il numero 6 in rosso.</p>
                     </div>
+                    <a href="Pagine/ArticoliScuola/Javascript5.html" class="btn btn-primary">Si!</a>
                 </div>
             </div>
             <div class="col">
-                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #fff9f5;">
+                <div class="card mx-auto shadow p-3 mb-5"
+                    style="width: 18rem; background-color: #fff9f5; height: 450px">
                     <img src="Immagini/Javascript.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Tipsit</h5>
-                        <p class="card-text">Qua ci sono degli esercizi! <br> Qua ci sarà HTML e JS.</p>
-                        <a href="Pagine/ArticoliScuola/Javascript4.html" class="btn btn-primary">Si!</a>
+                        <h5 class="card-title">Javascript 4</h5>
+                        <p class="card-text">Cliccando dei button si cambia il colore di un div.</p>
                     </div>
+                    <a href="Pagine/ArticoliScuola/Javascript4.html" class="btn btn-primary">Si!</a>
                 </div>
             </div>
             <div class="col">
-                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #fff9f5;">
+                <div class="card mx-auto shadow p-3 mb-5"
+                    style="width: 18rem; background-color: #fff9f5; height: 450px">
                     <img src="Immagini/Javascript.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Tipsit</h5>
-                        <p class="card-text">Qua ci sono degli esercizi! <br> Qua ci sarà HTML e JS.</p>
-                        <a href="Pagine/ArticoliScuola/Javascript3.html" class="btn btn-primary">Si!</a>
+                        <h5 class="card-title">Javascript 3</h5>
+                        <p class="card-text">Moltiplica 2 numeri dati dall'utente.</p>
                     </div>
+                    <a href="Pagine/ArticoliScuola/Javascript3.html" class="btn btn-primary">Si!</a>
                 </div>
             </div>
             <div class="col">
-                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #fff9f5;">
+                <div class="card mx-auto shadow p-3 mb-5"
+                    style="width: 18rem; background-color: #fff9f5; height: 450px">
                     <img src="Immagini/Javascript.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Tipsit</h5>
-                        <p class="card-text">Qua ci sono degli esercizi! <br> Qua ci sarà HTML e JS.</p>
-                        <a href="Pagine/ArticoliScuola/Javascript2.html" class="btn btn-primary">Si!</a>
+                        <h5 class="card-title">Javascript 2</h5>
+                        <p class="card-text">Cliccando un'immagine ti mostra la tabella della verità.</p>
                     </div>
+                    <a href="Pagine/ArticoliScuola/Javascript2.html" class="btn btn-primary">Si!</a>
                 </div>
             </div>
             <div class="col">
-                <div class="card mx-auto shadow p-3 mb-5" style="width: 18rem; background-color: #fff9f5;">
+                <div class="card mx-auto shadow p-3 mb-5"
+                    style="width: 18rem; background-color: #fff9f5; height: 450px">
                     <img src="Immagini/Javascript.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Tipsit</h5>
-                        <p class="card-text">Qua ci sono degli esercizi! <br> Qua ci sarà HTML e JS.</p>
-                        <a href="Pagine/ArticoliScuola/Javascript.html" class="btn btn-primary">Si!</a>
+                        <h5 class="card-title">Javascript</h5>
+                        <p class="card-text">Fa come alert una tabellina</p>
                     </div>
+                    <a href="Pagine/ArticoliScuola/Javascript.html" class="btn btn-primary">Si!</a>
                 </div>
             </div>
         </div>
