--- a/Pagine/ArticoliScuola/Javascript16.html
+++ b/Pagine/ArticoliScuola/Javascript16.html
@@ -83,7 +83,9 @@
   </nav>
   <!--Barra di sopra-->
   <div class="container-fluid">
-    <button onclick="principale()"></button>
+    <button type="button" onclick="principale()" class="btn btn-outline-primary">
+      200 mila numeri primi!
+    </button>
     <p id="output1"></p>
   </div>
   <!--Barra di sotto-->
